k8s/back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      serviceAccountName: sy-secret-sa
      containers:
      - name: back
        image: parkseoyeon/sy-backend:v5  # Docker Hub에서 이미지를 가져옵니다.
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: sy-secrets-store
            mountPath: "/mnt/secrets-store"
            readOnly: true
      volumes:
        - name: sy-secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "sy-rds-secret-provider"
