k8s/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-backend-service
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 8080 # REACT_APP_STOCK_BACKEND_URL=http://stock-backend-service에 port 번호 작성하지 않으려면 80이어야 함      targetPort: 8080  # 컨테이너가 노출하는 포트
  type: ClusterIP  # 외부에서 접근할 수 있도록 외부 IP를 할
