k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-frontend-service
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # 컨테이너가 노출하는 포트
  type: ClusterIP  # 외부에서 접근할 수 있도록 외부 IP를 할
